--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <script>
         // A URL da API. Este é um EXEMPLO e pode precisar ser alterado.
         // A BrandMeister pode ter uma URL específica para a API em formato JSON.
-        const apiUrl = 'https://bm-psi.vercel.app/api/proxy?page=lh&destinationId=268';
+        const apiUrl = 'https://bm-psi.vercel.app/api/proxy?page=lh&DestinationID=268';
 
         // Obtém o elemento onde vamos mostrar os dados.
         const dataContainer = document.getElementById('brandmeister-data');
