--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
             font-family: Arial, sans-serif;
             margin: 20px;
             background-color: #f4f4f4;
+            color: #333;
         }
         h1 {
-            color: #333;
+            color: #0056b3;
+            text-align: center;
         }
         .filters {
             margin-bottom: 20px;
+            text-align: center;
         }
         .filters label {
             margin-right: 10px;
@@ -25,6 +28,10 @@
             font-size: 1em;
             border-radius: 5px;
             border: 1px solid #ccc;
+            margin: 5px;
+        }
+        .table-container {
+            overflow-x: auto;
         }
         table {
             width: 100%;
@@ -42,6 +49,7 @@
             background-color: #0056b3;
             color: #fff;
             cursor: pointer;
+            white-space: nowrap; /* Impede que o texto do cabeçalho se quebre */
         }
         tr:nth-child(even) {
             background-color: #f9f9f9;
@@ -54,6 +62,27 @@
             padding: 20px;
             font-size: 1.2em;
             color: #555;
+        }
+
+        /* Estilos para ecrãs pequenos (telemóveis) */
+        @media (max-width: 600px) {
+            body {
+                margin: 10px;
+            }
+            .filters {
+                text-align: left;
+            }
+            .filters select {
+                width: 100%;
+                box-sizing: border-box;
+                display: block;
+                margin-bottom: 10px;
+            }
+            th, td {
+                font-size: 0.8em;
+                padding: 8px 10px;
+                white-space: nowrap;
+            }
         }
     </style>
 </head>
@@ -77,27 +106,29 @@
         A carregar dados...
     </div>
 
-    <table id="heardTable" style="display: none;">
-        <thead>
-            <tr>
-                <th>Hora</th>
-                <th>Indicativo</th>
-                <th>Nome</th>
-                <th>Local</th>
-                <th>TG</th>
-                <th>Slot</th>
-                <th>Servidor</th>
-                <th>RSSI</th>
-                <th>Loss</th>
-            </tr>
-        </thead>
-        <tbody>
-            </tbody>
-    </table>
+    <div class="table-container">
+        <table id="heardTable" style="display: none;">
+            <thead>
+                <tr>
+                    <th>Hora</th>
+                    <th>Indicativo</th>
+                    <th>Nome</th>
+                    <th>Local</th>
+                    <th>TG</th>
+                    <th>Slot</th>
+                    <th>Servidor</th>
+                    <th>RSSI</th>
+                    <th>Loss</th>
+                </tr>
+            </thead>
+            <tbody>
+                </tbody>
+        </table>
+    </div>
 
     <script>
         const API_URL = 'https://bm-psi.vercel.app/api/last-heard';
-        let allData = []; // Variável global para guardar todos os dados
+        let allData = [];
         
         const callsignFilter = document.getElementById('callsign-filter');
         const tgFilter = document.getElementById('tg-filter');
@@ -135,7 +166,6 @@
                 if (item[10]) tgs.add(item[10]);
             });
 
-            // Ordenar os Indicativos
             const sortedCallsigns = Array.from(callsigns).sort();
             sortedCallsigns.forEach(callsign => {
                 const option = document.createElement('option');
@@ -144,7 +174,6 @@
                 callsignFilter.appendChild(option);
             });
 
-            // Ordenar os TGs numericamente
             const sortedTGs = Array.from(tgs).sort((a, b) => a - b);
             sortedTGs.forEach(tg => {
                 const option = document.createElement('option');
