--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             background-color: #0056b3;
             color: #fff;
             cursor: pointer;
-            white-space: nowrap; /* Impede que o texto do cabeçalho se quebre */
+            white-space: nowrap;
         }
         tr:nth-child(even) {
             background-color: #f9f9f9;
@@ -167,6 +167,7 @@
             });
 
             const sortedCallsigns = Array.from(callsigns).sort();
+            callsignFilter.innerHTML = '<option value="">Todos</option>'; // Reinicia o filtro
             sortedCallsigns.forEach(callsign => {
                 const option = document.createElement('option');
                 option.value = callsign;
@@ -175,6 +176,7 @@
             });
 
             const sortedTGs = Array.from(tgs).sort((a, b) => a - b);
+            tgFilter.innerHTML = '<option value="">Todos</option>'; // Reinicia o filtro
             sortedTGs.forEach(tg => {
                 const option = document.createElement('option');
                 option.value = tg;
@@ -184,6 +186,10 @@
         }
         
         function applyFilters() {
+            // Guardar a seleção no localStorage
+            localStorage.setItem('selectedCallsign', callsignFilter.value);
+            localStorage.setItem('selectedTg', tgFilter.value);
+
             const selectedCallsign = callsignFilter.value;
             const selectedTg = tgFilter.value;
             let filteredData = allData;
@@ -211,7 +217,20 @@
                 allData = data; 
                 
                 populateFilters(allData);
-                renderTable(allData);
+
+                // Carregar as seleções do localStorage
+                const savedCallsign = localStorage.getItem('selectedCallsign');
+                const savedTg = localStorage.getItem('selectedTg');
+
+                if (savedCallsign && savedCallsign !== 'null') {
+                    callsignFilter.value = savedCallsign;
+                }
+                if (savedTg && savedTg !== 'null') {
+                    tgFilter.value = savedTg;
+                }
+
+                applyFilters();
+
             } catch (error) {
                 console.error('Erro ao obter dados:', error);
                 loadingMessage.innerText = 'Erro ao carregar os dados. Tente novamente mais tarde.';
