--- a/index.html
+++ b/index.html
@@ -181,6 +181,15 @@
             4: 'Lost'
         };
 
+        // Mapeamento de números para tipos de chamada de texto
+        const callTypeMap = {
+            0: 'Private',
+            1: 'Group',
+            2: 'All',
+            3: 'Data',
+            4: 'Emergency'
+        };
+
         const callsignFilter = document.getElementById('callsign-filter');
         const tgFilter = document.getElementById('tg-filter');
         const clearFiltersBtn = document.getElementById('clear-filters');
@@ -209,7 +218,6 @@
                 
                 const stateValue = stateMap[item[13]] || '';
                 
-                // Adiciona a classe CSS baseada no estado
                 let stateClass = '';
                 if (stateValue === 'In Progress') {
                     stateClass = 'badge-success';
@@ -219,13 +227,16 @@
                     stateClass = 'badge-warning';
                 }
 
+                // Mapeia o valor numérico do tipo de chamada para a string correspondente
+                const callTypeValue = callTypeMap[item[8]] || '';
+
                 const row = document.createElement('tr');
                 row.innerHTML = `
                     <td>${item[2] ? new Date(item[2] * 1000).toLocaleString() : ''}</td>
                     <td>${item[4] || ''}</td>
                     <td>${item[6] || ''}</td>
                     <td>${item[7] || ''}</td>
-                    <td>${item[8] || ''}</td>
+                    <td>${callTypeValue}</td>
                     <td>${item[9] || ''}</td>
                     <td>${item[10] || ''}</td>
                     <td><span class="${stateClass}">${stateValue}</span></td>
