--- a/index.html
+++ b/index.html
@@ -181,15 +181,6 @@
             4: 'Lost'
         };
 
-        // Mapeamento de números para tipos de chamada de texto
-        const callTypeMap = {
-            0: 'Private',
-            1: 'Group',
-            2: 'All',
-            3: 'Data',
-            4: 'Emergency'
-        };
-
         const callsignFilter = document.getElementById('callsign-filter');
         const tgFilter = document.getElementById('tg-filter');
         const clearFiltersBtn = document.getElementById('clear-filters');
@@ -227,8 +218,7 @@
                     stateClass = 'badge-warning';
                 }
 
-                // Mapeia o valor numérico do tipo de chamada para a string correspondente
-                const callTypeValue = callTypeMap[item[8]] || '';
+                const callTypeValue = item[8] || ''; // Alterado para mostrar o número diretamente
 
                 const row = document.createElement('tr');
                 row.innerHTML = `
