Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -18,13 +18,6 @@
         th.sorted-desc::after {
             content: ' ▼';
         }
-        /* CORREÇÃO ROBUSTA PARA O CABEÇALHO */
-        thead {
-            background-color: #0d6efd !important; /* Cor primária do Bootstrap */
-        }
-        thead th {
-            color: white !important;
-        }
     </style>
 </head>
 <body>
@@ -53,23 +46,23 @@
             <table id="heardTable" class="table table-striped table-hover table-sm" style="display: none;">
                 <thead>
                     <tr>
-                        <th data-column-index="2" data-type="date" class="fw-bold">Data</th>
-                        <th data-column-index="4" data-type="string" class="fw-bold">Link Name</th>
-                        <th data-column-index="6" data-type="number" class="fw-bold">Link ID</th>
-                        <th data-column-index="7" data-type="number" class="fw-bold">Slot</th>
-                        <th data-column-index="8" data-type="string" class="fw-bold">Call Type</th>
-                        <th data-column-index="9" data-type="string" class="fw-bold">Source ID</th>
-                        <th data-column-index="10" data-type="number" class="fw-bold">To TG</th>
-                        <th data-column-index="13" data-type="string" class="fw-bold">State</th>
-                        <th data-column-index="14" data-type="number" class="fw-bold">Duration</th>
-                        <th data-column-index="15" data-type="number" class="fw-bold">RSSI</th>
-                        <th data-column-index="17" data-type="number" class="fw-bold">Loss Rate</th>
-                        <th data-column-index="20" data-type="string" class="fw-bold">Repeater Call</th>
-                        <th data-column-index="21" data-type="string" class="fw-bold">Source Call</th>
-                        <th data-column-index="22" data-type="string" class="fw-bold">Source Name</th>
-                        <th data-column-index="23" data-type="string" class="fw-bold">Destination Call</th>
-                        <th data-column-index="24" data-type="string" class="fw-bold">Destination Name</th>
-                        <th data-column-index="25" data-type="string" class="fw-bold">Talker Alias</th>
+                        <th data-column-index="2" data-type="date" class="bg-primary text-white fw-bold">Data</th>
+                        <th data-column-index="4" data-type="string" class="bg-primary text-white fw-bold">Link Name</th>
+                        <th data-column-index="6" data-type="number" class="bg-primary text-white fw-bold">Link ID</th>
+                        <th data-column-index="7" data-type="number" class="bg-primary text-white fw-bold">Slot</th>
+                        <th data-column-index="8" data-type="string" class="bg-primary text-white fw-bold">Call Type</th>
+                        <th data-column-index="9" data-type="string" class="bg-primary text-white fw-bold">Source ID</th>
+                        <th data-column-index="10" data-type="number" class="bg-primary text-white fw-bold">To TG</th>
+                        <th data-column-index="13" data-type="string" class="bg-primary text-white fw-bold">State</th>
+                        <th data-column-index="14" data-type="number" class="bg-primary text-white fw-bold">Duration</th>
+                        <th data-column-index="15" data-type="number" class="bg-primary text-white fw-bold">RSSI</th>
+                        <th data-column-index="17" data-type="number" class="bg-primary text-white fw-bold">Loss Rate</th>
+                        <th data-column-index="20" data-type="string" class="bg-primary text-white fw-bold">Repeater Call</th>
+                        <th data-column-index="21" data-type="string" class="bg-primary text-white fw-bold">Source Call</th>
+                        <th data-column-index="22" data-type="string" class="bg-primary text-white fw-bold">Source Name</th>
+                        <th data-column-index="23" data-type="string" class="bg-primary text-white fw-bold">Destination Call</th>
+                        <th data-column-index="24" data-type="string" class="bg-primary text-white fw-bold">Destination Name</th>
+                        <th data-column-index="25" data-type="string" class="bg-primary text-white fw-bold">Talker Alias</th>
                     </tr>
                 </thead>
                 <tbody>
