Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         th.sorted-desc::after {
             content: ' ▼';
         }
+        /* CORREÇÃO PARA QUE O TEXTO DO CABEÇALHO QUEBRE AS LINHAS */
+        thead th {
+            white-space: normal;
+        }
     </style>
 </head>
 <body>
