--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     bValue = String(bValue || '');
                 }
 
-                if (aValue < b-Value) {
+                if (aValue < bValue) {
                     return direction === 'asc' ? -1 : 1;
                 }
                 if (aValue > bValue) {
