Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 
-    <div class="container my-4">
+    <div class="container-fluid my-4">
         <h1 class="text-center text-primary mb-4">BrandMeister - Last Heard</h1>
     
         <div class="filters text-center mb-4">
@@ -119,7 +119,6 @@
         const tableHeaders = document.querySelectorAll('#heardTable thead th');
 
         function formatDuration(seconds) {
-            // VERIFICA SE O VALOR É VÁLIDO ANTES DE FORMATAR
             if (typeof seconds !== 'number' || seconds < 0 || isNaN(seconds)) {
                 return '';
             }
@@ -130,19 +129,17 @@
             return `${formattedMinutes}:${formattedSeconds}`;
         }
 
-        // Determina a classe de cor do sinal com base no valor RSSI
         function getSignalClass(rssi) {
             if (rssi > -80) {
-                return 'text-success'; // Sinal excelente (verde)
+                return 'text-success';
             } else if (rssi > -95) {
-                return 'text-warning'; // Sinal bom/aceitável (amarelo)
+                return 'text-warning';
             } else if (rssi > -110) {
-                return 'text-danger'; // Sinal fraco (vermelho)
+                return 'text-danger';
             }
-            return 'text-secondary'; // Sinal muito fraco ou sem dados (cinzento)
+            return 'text-secondary';
         }
 
-        // Converte o valor de RSSI para a escala S-meter
         function getSunitFromRssi(rssi) {
             if (typeof rssi !== 'number') {
                 return 'N/A';
@@ -189,14 +186,12 @@
                 const repeaterCallValue = item[20] || '';
                 let repeaterClass = '';
 
-                // Lógica de cores para o Repeater Call
                 if (repeaterCallValue.toUpperCase().startsWith('CQO')) {
                     repeaterClass = 'text-success';
                 } else if (repeaterCallValue.toUpperCase().startsWith('XLX') || repeaterCallValue.toUpperCase().startsWith('CS') || repeaterCallValue.toUpperCase().startsWith('REFLECTOR')) {
                     repeaterClass = 'text-primary';
                 }
                 
-                // LÓGICA CORRIGIDA DO RSSI: Verifica se o valor é um número
                 const rssiValue = item[15];
                 let rssiContent = '';
                 if (typeof rssiValue === 'number') {
@@ -260,7 +255,6 @@
                 tgFilter.appendChild(option);
             });
 
-            // LÓGICA CORRIGIDA PARA O FILTRO: verifica se o valor guardado existe na nova lista
             const savedCallsign = localStorage.getItem('selectedCallsign');
             if (savedCallsign && sortedCallsigns.includes(savedCallsign)) {
                 callsignFilter.value = savedCallsign;
