Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
                 const repeaterCallValue = item[20] || '';
                 let repeaterClass = '';
 
+                // Lógica para aplicar a classe de cor (será atualizada com as suas regras)
                 if (repeaterCallValue.toUpperCase().startsWith('CQO')) {
                     repeaterClass = 'text-success';
                 } else if (repeaterCallValue.toUpperCase().startsWith('XLX') || repeaterCallValue.toUpperCase().startsWith('CS') || repeaterCallValue.toUpperCase().startsWith('REFLECTOR')) {
