Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 const repeaterCallValue = item[20] || '';
                 let repeaterClass = '';
 
-                if (repeaterCallValue.trim().toUpperCase().startsWith('CQO')) {
+                if (repeaterCallValue.trim().toUpperCase().includes('CQO')) {
                     repeaterClass = 'text-success';
                 }
                 
